# livekit-client-sdk-python

./: .gitattributes  .gitignore  README.md  requirements.txt  setup.cfg
doc/: livekit-server-config.yaml
examples/publisher/: publisher.py
examples/subscriber/: recorder.py  subscriber.py
src/livekit_signaling/: __init__.py  livekit_protobuf_defs.py  livekit_types.py  signaling.py  utils.py
