[metadata]
# This is required for any package to install with a name
name = livekit_signaling
# If you want to publish on PyPI then the following are also required
# https://daveshawley.medium.com/safely-using-setup-cfg-for-metadata-1babbe54c108
# Either (author and author_email) or (maintainer and maintainer_email) must be supplied
url = https://github.com/dguerizec/livekit-signaling-python
author = David Guerizec
author_email = david@guerizec.net
# This is useful but not required
version = 0.1.0-alpha.1

# If you are using the "src" layout then we need the following
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[options]
package_dir=
    =src
packages=find:
install_requires =
    aiortc @ git+https://github.com/dguerizec/aiortc.git
    websockets
    livekit-server-sdk-python
    pyee

[options.packages.find]
where=src

[options.extras_require]
dev =
    ipdb
    ipython<8.2.0
    mypy
    mypy-extensions
    types-setuptools
    protobuf
