[metadata]
# This is required for any package to install with a name
name = livekit_signaling
# If you want to publish on PyPI then the following are also required
# https://daveshawley.medium.com/safely-using-setup-cfg-for-metadata-1babbe54c108
# Either (author and author_email) or (maintainer and maintainer_email) must be supplied
url = https://github.com/dguerizec/livekit-signaling-python
author = David Guerizec
author_email = david@guerizec.net
# This is useful but not required
version = 0.1.0-alpha.1

# If you are using the "src" layout then we need the following
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
[options]
package_dir=
    =src
packages=find:
install_requires =
    aiortc @ git+https://github.com/dguerizec/aiortc.git
    websockets
    livekit-server-sdk-python
    pyee
    pyOpenSSL==22.1.0

[options.packages.find]
where=src

[options.extras_require]
dev =
    ipdb
    ipython<8.2.0
    mypy
    mypy-extensions
    types-setuptools
    protobuf

[mypy]
python_version = 3.10
mypy_path = $MYPY_CONFIG_FILE_DIR/stubs
check_untyped_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = False
warn_return_any = True
warn_unreachable = True
local_partial_types = True
strict_equality = True
show_error_context = True
show_column_numbers = True
show_error_codes = True
pretty = True
strict = True
implicit_reexport = True

